--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "teli"
 version = "0.1.0"
 edition = "2021"
+description = "TCP based networking library for games. Crate currently is used for learning purposes."
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
